--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,8 @@
-This is libcueify 0.1.0
+This is libcueify 0.5.0
+
+Features added in 0.5.0:
+
+	 * Newly supported OSs: Darwin (Mac OS X)
 
 Features in 0.1.0:
 
