--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ This is libcueify 0.5.0
 Changes in 0.5.0:
 
 	* Newly supported OSs: Darwin (Mac OS X)
+	* Added C++ bindings <libcueify/cueify.hpp>
 
 Changes in 0.1.1:
 
